  any object which is an aggregate of such ex will only ever have to
  evaluate itself, obsoleting the need for recursing.
* Remove 'level' arguments of all .evalf() and .normal() methods. They were
  modeled after the .eval() methods.
* Make relational::rhs() and lhs() nonvirtual.
* Add support for power::info(info_flags::real).
* Remove broken info_flags::algebraic.
* Remove unmaintained support for Cint.
* Remove unfinished andcode for hash table-based expairseq.
* Remove deprecated ex::to_rational(lst) and ex::to_polynomial(lst).
* ginac-excompiler installs in $LIBEXECDIR now, not in $BINDIR.
* Many minor performance enhancements.

1.6.7 (29 February 2016)
* Fix elusive bug in sqrfree(), normal(), numer(), and denom().

1.6.6 (20 December 2015)
* Fix elusive bug in add::eval().
* Several minor performance enhancements.

1.6.5 (27 July 2015)
* Fix pow(+(...),2).expand() where the sum contained roots of expressions.
* Speed-up pow(+(...),n).expand() where n > 3.
* Fix a crash in PolyLogs of rational numbers.

1.6.4 (8 May 2015)
* Fix pow(+(...),2).expand() where the sum contained roots of rationals.
* Various improvements for info(info_flags::nonnegative).
* Make power::expand() (x*p)^c -> x^c * p^c, if p>0.
* Fix normal() where nested functions occur multiple times.
* Add optional explicit derivatives to functions and use it in abs(),
  imag_part(), real_part().
* Evaluate abs(z)^(2n) -> z^n * conjugate(z)^n.

1.6.3 (27 November 2014)
* New expand_options::expand_transcendental. GiNaC will apply additional
  rules when expanding expressions if this option is specified, i.e.
  log(a*b) -> log(a) + log(b)
  exp(a + b) -> exp(a)*exp(b)
* Functions can define a custom expand() and info() now.
* Automatically rewrite (x^{-1})^c -> x^{-c} for positive c.
* Transform abs(x)^n -> x^n if x is real and n is even.
* Improved power::info(): power with a real base and even exponent
  reports that it's non-negative.